--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
         <module>cloud-consumer-order80</module>
         <module>cloud-api-commons</module>
         <module>cloud-eureka-server7001</module>
-        <module>cloud-eureka-server7002</module>
         <module>cloud-provider-payment8002</module>
         <module>cloud-provider-payment8004</module>
         <module>cloud-consumerzk-order80</module>
         <module>cloud-provider-payment8006</module>
         <module>cloud-consumerconsul-order80</module>
+        <module>cloud-eureka-server</module>
     </modules>
     <packaging>pom</packaging>
     <name>cloud_demo</name>
