--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>cloud-provider-payment8006</module>
         <module>cloud-consumerconsul-order80</module>
         <module>cloud-eureka-server</module>
+        <module>cloud-consumer-feign-order80</module>
     </modules>
     <packaging>pom</packaging>
     <name>cloud_demo</name>
