--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
         <module>cloud-consumer-feign-hystrix-order80</module>
         <module>cloud-consumer-hystrix-dashboard9001</module>
         <module>cloud-gateway-gateway9527</module>
+        <module>cloud-config-center3344</module>
+        <module>cloud-config-client3355</module>
+        <module>cloud-config-client3366</module>
     </modules>
     <packaging>pom</packaging>
     <name>cloud_demo</name>
