--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
         <module>cloud-config-center3344</module>
         <module>cloud-config-client3355</module>
         <module>cloud-config-client3366</module>
+        <module>cloud-stream-kafka-provider8801</module>
+        <module>cloud-stream-kafka-consumer8802</module>
+        <module>cloud-stream-kafka-consumer8803</module>
     </modules>
     <packaging>pom</packaging>
     <name>cloud_demo</name>
