--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,9 @@
         <module>cloud-alibaba-consumer-nacos-order83</module>
         <module>cloud-alibaba-config-nacos-client3377</module>
         <module>cloud-alibaba-sentinel-service8401</module>
+        <module>cloud-alibaba-provider-payment9003</module>
+        <module>cloud-alibaba-provider-payment9004</module>
+        <module>cloud-alibaba-consumer-nacos-order84</module>
     </modules>
     <packaging>pom</packaging>
     <name>cloud_demo</name>
