sentinel dashboard配置持久化

--- a/cloud-alibaba-sentinel-service8401/pom.xml
+++ b/cloud-alibaba-sentinel-service8401/pom.xml
@@ -14,7 +14,7 @@
     <version>1.0.0</version>
 
     <dependencies>
-        <!--后续持久化用-->
+        <!--流控规则持久化到数据库-->
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-datasource-nacos</artifactId>
@@ -46,12 +46,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
